data/derived/comb/progs/unify/prog0648.ml.out
Characters 153-157:
  (List.append (clone 0 (-diff)) len1, len2)
                                 ^^^^
Error: This expression has type int but an expression was expected of type
         int list
